snapshot-tests/tests/snapshots/parser__bad_table_names__newline_literal.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ newline_literal:1:2
  │
1 │ ['
  │  ^ expected `'`
